<resources>
    <string name="app_name">CompleteTask</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_Button">Login</string>
    <string name="SignUp_Button">SignUp</string>
    <string name="UserName_PlainText">UserName</string>
    <string name="Password_PlainText">Password</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="discription">Discription</string>
    <string name="title">Title</string>
    <string name="setTime">SetTime</string>
    <string name="setDate">SetDate</string>
    <string name="done">Done</string>
    <string name="doing">Doing</string>
    <string name="todo">ToDo</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="username">UserName</string>
    <string name="ok">Ok</string>
    <string name="cancle">Cancel</string>
</resources>
