<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".fragments.DiaLogFragment">

    <!-- TODO: Update blank fragment layout -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">
    <EditText
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:id="@+id/dialog_title"
        />
    <EditText
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_height="130dp"
        android:layout_margin="8dp"
        android:hint="@string/discription"
        android:id="@+id/dialog_discription"
        />
        <Button
            android:id="@+id/dialog_date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape4"
            android:layout_margin="8dp"
            android:textColor="#FFFFFF"
            android:text="@string/setDate"
            android:layout_gravity="center"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape4"
        android:layout_margin="8dp"
            android:id="@+id/dialog_time"
        android:text="@string/setTime"
        android:textColor="#FFFFFF"
        android:layout_gravity="center"/>


</LinearLayout>



</LinearLayout>